jdk/jfr/event/runtime/TestShutdownEvent.java crash with CONF=fastdebug -Xcomp

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 23
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • jfr
    • b02
    • generic
    • generic

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/home/sunguoyun/jdk-ls/src/hotspot/share/jfr/support/jfrNativeLibraryLoadEvent.cpp:107), pid=13214, tid=13215
        # assert(jt->thread_state() == _thread_in_native) failed: invariant
        #
        # JRE version: OpenJDK Runtime Environment (22.0) (fastdebug build 22-internal-adhoc.sunguoyun.jdk-ls)
        # Java VM: OpenJDK 64-Bit Server VM (fastdebug 22-internal-adhoc.sunguoyun.jdk-ls, compiled mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0xe9404a] NativeLibraryLoadEvent::~NativeLibraryLoadEvent()+0xd1a
        #
        # CreateCoredumpOnCrash turned off, no core file dumped
        #
        # JFR recording file will be written. Location: /home/sunguoyun/jdk-ls/build/linux-x86_64-server-fastdebug/test-support/jtreg_test_jdk_jdk_jfr_event_runtime_TestShutdownEvent_java/scratch/0/hs_err_pid13214.jfr
        #
        # An error report file with more information is saved as:
        # /home/sunguoyun/jdk-ls/build/linux-x86_64-server-fastdebug/test-support/jtreg_test_jdk_jdk_jfr_event_runtime_TestShutdownEvent_java/scratch/0/hs_err_pid13214.log

              Assignee:
              Sun Guoyun
              Reporter:
              Sun Guoyun
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: